// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubscriptionCompliancy /> should warn during evaluation period 1`] = `
<Alert
  className="subscription-settings compliancy-alert"
  isInline={true}
  title="OpenShift evaluation expiration date"
  variant="warning"
>
  <p>
    Your OpenShift evaluation will expire at 
    <DateFormat
      type="onlyDate"
    />
    . 
    <a
      href="https://www.redhat.com/en/contact"
      rel="noreferrer noopener"
      target="_blank"
    >
      Contact sales
    </a>
     to purchase an OpenShift subscription.
  </p>
</Alert>
`;

exports[`<SubscriptionCompliancy /> should warn during evaluation period 2`] = `
<Alert
  className="subscription-settings compliancy-alert"
  isInline={true}
  title="OpenShift evaluation expiration date"
  variant="warning"
>
  <p>
    Your OpenShift evaluation will expire at 
    <DateFormat
      type="onlyDate"
    />
    . 
    The cluster owner or an Organization Administrator can edit subscription settings for non-evaluation use.
  </p>
</Alert>
`;

exports[`<SubscriptionCompliancy /> should warn when evaluation is expired 1`] = `
<Alert
  className="subscription-settings compliancy-alert"
  isInline={true}
  title="Your 60-day OpenShift evaluation has expired"
  variant="danger"
>
  <p>
    Your cluster is not supported and you may stop receiving updates.
     
    <a
      href="https://www.redhat.com/en/contact"
      rel="noreferrer noopener"
      target="_blank"
    >
      Contact sales
    </a>
     to purchase an OpenShift subscription.
     
    <Button
      isInline={true}
      onClick={[Function]}
      variant="link"
    >
      Archive this cluster
    </Button>
     if it no longer exits. 
  </p>
</Alert>
`;

exports[`<SubscriptionCompliancy /> should warn when evaluation is expired 2`] = `
<Alert
  className="subscription-settings compliancy-alert"
  isInline={true}
  title="Your 60-day OpenShift evaluation has expired"
  variant="danger"
>
  <p>
    Your cluster is not supported and you may stop receiving updates.
     
    The cluster owner or an Organization Administrator can edit subscription settings for non-evaluation use.
  </p>
</Alert>
`;
